[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Start.gd" type="Script" id=1]

[sub_resource type="Theme" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -34.5
margin_top = -46.0
margin_right = 34.5
margin_bottom = 46.0
theme = SubResource( 1 )

[node name="EpisodesButton" type="Button" parent="VBoxContainer"]
margin_right = 69.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( -268, -26 )
focus_neighbour_top = NodePath("../ExitButton")
text = "Episodes"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 69.0
margin_bottom = 44.0
rect_pivot_offset = Vector2( -268, -26 )
text = "Options"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 69.0
margin_bottom = 68.0
rect_pivot_offset = Vector2( -268, -26 )
text = "Credits"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 69.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( -268, -26 )
focus_neighbour_bottom = NodePath("../EpisodesButton")
text = "Exit"

[connection signal="pressed" from="VBoxContainer/EpisodesButton" to="." method="_on_EpisodesButton_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
